Adjustment Instagram profile picture

--- a/Código/CSS, HTML e JS/Instagram/index.html
+++ b/Código/CSS, HTML e JS/Instagram/index.html
@@ -16,7 +16,7 @@
             <div class="group">
                 <img src="./img/instagram-logo.png" alt="Instagram logo" class="'instagram-logo">
                 <div class="profile-photo">
-                    <img src="./img/teus.jpg" alt="Foto do perfil">
+                    <img src="./img/perfi-instagram.jpg" alt="Foto do perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como AscacibasMateus</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
